<resources>
    <string name="app_name">Pizza</string>
    <string name="shop">Shop</string>
    <string name="courier">Courier</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="create_new">Create new</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="to_order">Order now</string>
    <string name="map">Map</string>
    <string name="show">Show</string>
    <string name="total">Total</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_basket">Basket</string>
    <string name="action_archive">Archive</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_reserve_table">Reserve table</string>
    <string name="action_edit_group">Edit group</string>
    <string name="action_remove_group">Remove group</string>
    <string name="title_news">All news</string>
    <string name="title_menu_order">Menu</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_make_pizza">Make the pizza</string>
    <string name="title_about">About us</string>
    <string name="title_settings">Settings</string>
    <string name="title_basket">Basket</string>
    <string name="title_delivery">Your delivery</string>
    <string name="title_archive_deliveries">Archive of deliveries</string>
    <string name="title_transport_deliveries">Transport of deliveries</string>
    <string name="title_addresses_on_map">Clients on map</string>
    <string name="title_archive_dishes">Archive of dishes</string>
    <string name="title_orders">Hot orders</string>
    <string name="title_reserve_table">Reserve table</string>
    <string name="title_reserve_table_delete">Delete</string>
    <string name="title_authentication">Autorization</string>
    <string name="title_push">Send notification</string>
    <string name="main_title_order_menu">Dishes</string>
    <string name="main_title_news">News</string>
    <string name="main_title_orders">Deliveries</string>
    <string name="main_title_contacts">Contacts</string>
    <string name="main_text_order_menu">Choose and order what you want</string>
    <string name="main_text_news">News about pizza and others</string>
    <string name="main_text_orders">Receiving orders for delivery</string>
    <string name="main_text_contacts">All our contacts</string>
    <string name="main_title_reservation">Reservation</string>
    <string name="main_text_reservation">Reserve a table</string>
    <string name="mes_no_internet">No internet connection</string>
    <string name="mes_no_records">It\'s empty</string>
    <string name="mes_check_data">Please check data</string>
    <string name="mes_group_not_empty">Group is not empty!</string>
    <string name="mes_have_delivery">You have active delivery</string>
    <string name="mes_dont_have_delivery">You don\'t have deliveries</string>
    <string name="mes_no_orders">It\'s empty.\n First, you need to add one or more dish.</string>
    <string name="mes_your_order_performed">Your order performed now</string>
    <string name="mes_no_soft_for_choose_image">No program for choose image!</string>
    <string name="mes_error_load_image">Loading image to server: ERROR</string>
    <string name="mes_enable_permission">Please enable permission for location service and restart program</string>
    <string name="mes_add_to_favorites">%1$s added to favorites</string>
    <string name="mes_remove_from_favorites">%1$s removed from favorites</string>
    <string name="instructions_custom_pizza">Make long click on ingredients and drag to basis for make your custom pizza</string>
    <string name="permission_location_not_granded">No permissions for use locales</string>
    <string name="confirm_remove_item">Do you want remove item?</string>
    <string name="hint_title_news">Title of news</string>
    <string name="hint_description_news">Full text of news</string>
    <string name="hint_name_dish">Name of dish</string>
    <string name="hint_description_dish">Description of dish</string>
    <string name="hint_price">119,99 грн</string>
    <string name="hint_name_group">Name of group</string>
    <string name="hint_on_map">Pizza</string>
    <string name="snipset_on_map">Best pizza</string>
    <string name="added_to_basket">added to basket</string>
    <string name="removed_from_basket">removed from basket</string>
    <string name="total_sum">Total sum</string>
    <string name="text_delivery_creation">Please input your data</string>
    <string name="name_delivery">Your name</string>
    <string name="address_delivery">Shipping address</string>
    <string name="phone_delivery">Contact phone number</string>
    <string name="comment_delivery">Comment</string>
    <string name="create_delivery">Create delivery</string>
    <string name="notification_delivery_title">New orders</string>
    <string name="notification_delivery_content">Confirm or cancel deliveries</string>
    <string name="notification_reserved_table_title">New table reservations</string>
    <string name="notification_reserved_table_content">Confirm or cancel reservation</string>
    <string name="notification_monitoring_delivery_title">Your order</string>
    <string name="notification_monitoring_table_reservation">Your table reservation</string>
    <string name="title_settings_category_contacts">Contacts</string>
    <string name="title_settings_category_address">Address</string>
    <string name="title_settings_phone">Phone</string>
    <string name="title_settings_email">Email</string>
    <string name="title_settings_address">Address</string>
    <string name="title_settings_latitude">Latitude</string>
    <string name="title_settings_longitude">Longitude</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_plus">+</string>
    <string name="tab_orders_new">New</string>
    <string name="tab_orders_cook">Cook</string>
    <string name="tab_orders_in_transit">In transit</string>
    <string name="dialog_title_edit_comment">Enter comment</string>
    <string name="dialog_title_delivery_reject">Rejecting of delivery</string>
    <string name="dialog_title_delivery_remove">Removing of delivery</string>
    <string name="mes_rejecting_delivery">Enter the reason for delivery rejection</string>
    <string name="mes_pass_courier">Transferred to the courier</string>
    <string name="mes_pass_archive">Order closed</string>
    <string name="mes_restored">Restored and put in new</string>
    <string name="mes_pass_kitchen">Transferred to the kitchen</string>
    <string name="mes_pass_new">Your order has been sent</string>
    <string name="mes_removed">Removed from program</string>
    <string name="btn_cook">Cook</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_transit">Courier</string>
    <string name="btn_paid">Paid</string>
    <string name="btn_failure">Failure</string>
    <string name="btn_to_archive">To archive</string>
    <string name="btn_restore">Restore</string>
    <string name="delivery_time_new">Receive order</string>
    <string name="delivery_time_cook">To kitchen</string>
    <string name="delivery_time_transport">To courier</string>
    <string name="delivery_time_archive">To archive</string>
    <string name="delivery_state_title_step1">Receive</string>
    <string name="delivery_state_title_step2">Cooking</string>
    <string name="delivery_state_title_step3">Delivery</string>
    <string name="delivery_state_title_step4_finish">Finish</string>
    <string name="delivery_state_title_step4_complete">Complete</string>
    <string name="delivery_state_title_step1_fail">Fail</string>
    <string name="delivery_state_description_step1_finish">Your order received and passed to the kitchen</string>
    <string name="delivery_state_description_step1_wait">The order has not been processed</string>
    <string name="delivery_state_description_step2_start">Began cooking</string>
    <string name="delivery_state_description_step2_finish">Cooking is complete</string>
    <string name="delivery_state_description_step3_start">Courier went to you</string>
    <string name="delivery_state_description_step3_finish">Delivery was performed</string>
    <string name="delivery_state_description_step4_paid">Bon Apetit</string>
    <string name="delivery_state_description_step4_fail">Fail</string>
    <string name="title_button_drive">Drive</string>
    <string name="title_button_walk">Walk</string>
    <string name="title_button_fullscreen">Fullscreen</string>
    <string name="dist">Dist.:</string>
    <string name="time">Time:</string>
    <string name="GivePermission">Give permission</string>
    <string name="hint_gps_permission">You see this text because you do not give permission to use GPS</string>
    <string name="mes_enable_gps">Please enable GPS</string>
    <string name="text_reservation_evening">Table reservation on evening </string>
    <string name="title_button_save">OK</string>
    <string name="title_button_remove">Remove</string>
    <string name="title_button_reserve">Reserve table</string>
    <string name="title_reserve_table_settings">Tables</string>
    <string name="title_reserve_table_settings_user">Contacts</string>
    <string name="mes_save_table_shema">Save tables placement</string>
    <string name="mes_reserve_table">Reserve a table</string>
    <string name="mes_confirm_reservetion">Confirm table reservation</string>
    <string name="mes_cancel_reservation">Cancel table reservation</string>
    <string name="mes_confirm_reservetion_user">Confirmed.</string>
    <string name="mes_cancel_reservetion_user">Canceled.</string>
    <string name="table_name_4">table4</string>
    <string name="table_name_6">table6</string>
    <string name="table_name_8">table8</string>
    <string name="facebook_app_id">405419523151306</string>
    <string name="firebase_server_key">AAAA7nMzSqQ:APA91bE3YJQt794cGiH6OusEd2LJQZpms4nQkrF9YEnTYVnHn0dilsr-aM3v7B9Vuc4eUJDFdhaHm7BJGvRB8tPgQUeu9-IPUfGz9RV7aH0LQtCzh8r6YPiMf2lisOFIuvCuuqNVMugt</string>
    <string name="facebook_email">email</string>
    <string name="facebook_permissions">id,name,email</string>
    <string name="facebook_fields">fields</string>
    <string name="button_google">Google+</string>
    <string name="button_facebook">Facebook</string>
    <string name="facebook_sign_in">FACEBOOK</string>
    <string name="google_sign_in">GOOGLE</string>
    <string name="sign_out">Sign out</string>
    <string name="title_auth">Sign in with your account</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="msg_link_auth">You have already signed in with %1$s. Please confirm your account, and in future you will be able to sign in with %2$s.</string>
    <string name="firebase_current_user">Firebase auth: current user = </string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="sign_status"><![CDATA[<b>%1$s</b><br>%2$s]]></string>
    <string name="hint_push_title">Title of the message</string>
    <string name="hint_push_message">Your message</string>
    <string name="notification_send_success">Notification send</string>
    <string name="notification_send_failed">Notification send failed</string>
    <string name="name_of_pizza">My pizza</string>
    <string name="title_activity_courier">CourierActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>