<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gek.pizza.activities.NewsEditActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical">


                    <ImageView
                        android:id="@+id/ivPhoto"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        tools:background="@drawable/news_empty" />


                    <ImageButton
                        android:id="@+id/ibRemovePhoto"
                        style="@style/RemoveButton"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/ic_delete"/>
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_title_news"
                        android:inputType="textCapSentences"
                        android:maxLength="50" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:hint="@string/hint_description_news"
                        android:inputType="textMultiLine|textCapSentences"
                        android:lines="8"
                        android:maxLines="10"
                        android:minLines="6"
                        android:scrollbars="vertical" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btnOk"
                    style="@style/RaisedButton"
                    android:enabled="true"
                    android:text="@string/ok" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>


