<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gek.pizza.activities.AuthenticationActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <TextView
                style="@style/textBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/auth_title_margin_bottom"
                android:layout_marginTop="@dimen/auth_title_margin_top"
                android:gravity="center"
                android:text="@string/title_auth"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:id="@+id/tvStatus"
                style="@style/textMiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/auth_title_margin_bottom"
                android:gravity="center"
                android:text="@string/msg_link_auth"
                android:textColor="@color/delete_toolbar_pink_200"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    facebook:com_facebook_login_text="Facebook" />

                <Button
                    android:id="@+id/btnGoogleSignIn"
                    style="@style/SignInButtonGoogle"
                    android:layout_width="150dp"
                    android:layout_marginRight="@dimen/activity_padding"
                    android:drawableLeft="@drawable/btn_google_light"
                    android:text="@string/google_sign_in"
                    android:textSize="@dimen/text_size_small" />

                <Button
                    android:id="@+id/btnFacebookSignIn"
                    style="@style/SignInButtonFacebook"
                    android:layout_width="150dp"
                    android:layout_marginLeft="@dimen/activity_padding"
                    android:drawableLeft="@drawable/com_facebook_button_icon"
                    android:padding="@dimen/floating_button_layout_margin"
                    android:text="@string/facebook_sign_in"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Sign in as:(for debug)"
                android:textSize="@dimen/text_size_middle"
                android:visibility="invisible"/>

            <RadioGroup
                android:id="@+id/rgUserAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:visibility="invisible">

                <RadioButton
                    android:id="@+id/rbtnUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User" />

                <RadioButton
                    android:id="@+id/rbtnAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Admin" />

            </RadioGroup>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/counter_margin"
                android:visibility="invisible" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
